# artificial-intelligence

./: .gitignore  AI展示.pptx  演示.ppt
BP/: .gitignore  CMakeLists.txt  Makefile  bp.cbp
BP/mnist/: network.txt
BP/output/: predict_imagelist.txt
BP/src/: CImgMNistData.cpp  CImgMNistData.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkTest.cpp  NumberSegmentation.cpp  NumberSegmentation.h  main.cpp  mnistData.cpp  mnistData.h  testUtils.cpp  testUtils.h
Chess/Chess/: Chess.cpp  Chess.h  audios.qrc  gamewindow.cpp  gamewindow.h  main.cpp  mainwindow.h  test.cpp
Chess/Sample/: chesshandler.cpp  chesshandler.h  mainwindow.cpp
Chess/build-Chess-Desktop_Qt_5_4_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_gamewindow.h
Chess/build-Chess-Desktop_Qt_5_4_0_MinGW_32bit-Release/: Makefile  Makefile.Debug  Makefile.Release  ui_gamewindows.h  (+1 more)
GA-TSP/: GA-Export.cpp  app.js  package-lock.json  test.cpp
SA/: annealing.h  annealthread.cpp  hillclimbing.h  mainwindow.ui  util.h
TSP/: climbthread.h  hillclimbing.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  testing.pro  testing.pro.user.36c327f
astar/: aStar.js  aStar.ts  aStarView.d.ts  aStarView.js  aStarView.ts  package-lock.json  puzzle.css  puzzle.html  puzzle.js  tsconfig.json
build-testing-Desktop_Qt_5_4_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  path.txt  ui_mainwindow.h
doc/: 2018AI实验提交说明.docx  AI作业分组和提交.docx  Astar算法.docx  GA.txt  SA实验.docx  alpha-beta剪枝.docx  实验报告提纲.doc  所有实验题目.docx  遗传算法求解TSP.docx
markdown/: Alpha-Beta剪枝算法实验报告.md  遗传算法实验报告.md
(+54 files in other folders)
